<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Intents</string>
    <string name="action_1">Activity Main</string>
    <string name="action_2">Second Activity</string>
    <string name="main_text">Main Activity</string>
    <string name="second_text">Second Activity</string>
    <string name="title_activity_second">SecondActivityTitle</string>
    <string name="action_2_parameters">Second Activity (Parameters)</string>
    <string name="action_browser">Navegador</string>
    <string name="start_action_service">Iniciar servicio</string>
    <string name="stop_action_service">Detener servicio</string>
    <string name="action_new_year">Terminar el año</string>

</resources>